<resources>
    <string name="app_name">StatusSavy</string>
    <string name="wa_line">Please enable Read/Write Storage Permission.</string>
    <string name="enable">Enable</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="whatsapp_stories">Story From Whatsapp</string>
    <string name="des">Since Android 11,you need to manually allow storage permission.\nPlease click \'Use this folder and than allow\'.</string>
    <string name="instagram_Login_text">Login Into Instagram</string>
    <string name="no_net_conn">no internet connection</string>
    <string name="download_fb_video">Download FB Video</string>
    <string name="paseyourUrl">Paste Your URL</string>
    <string name="download">Download</string>
    <string name="loding">Loading..</string>
    <string name="close_button">close button</string>
    <string name="download_instagram_story">Download Instagram Story</string>
    <string name="zero_percent">0%</string>
    <string name="downloading_story">Downloading Story</string>
    <string name="share">Share</string>
    <string name="oops_exclamation">Oops!</string>
    <string name="no_users">No data found.</string>
    <string name="download_tending_wallpapers">Download Wallpapers</string>
    <string name="download_">Download</string>
    <string name="save">Save</string>
    <string name="whatsapp_status">WhatsApp Status</string>
    <string name="trending_wallpapers">Trending Wallpapers</string>
    <string name="view_all">view all</string>
    <string name="gallery">Gallery</string>

    <string name="join_us_on_telegram">Join Us On Telegram</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="follow_us_on_twitter">Follow us on Twitter</string>
    <string name="follow_us_on_instagram">Follow us on Instagram</string>
    <string name="subscribe_on_youtube">Subscribe on Youtube</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="accept">Accept</string>

    <string name="facebook_link">https://www.facebook.com/gamersanjuyt</string>
    <string name="twitter_link">https://twitter.com/mobcandyapp</string>
    <string name="instagram_link">https://www.instagram.com/cashleyapp/</string>
    <string name="youtube_link">https://www.youtube.com/channel/UCLV_ZFqTH9l4zx8VFZ-Xjqw</string>
    <string name="telegram_link">https://t.me/EarnMoreEarnBig</string>
    <string name="guid_line">Login to watch status from Whatsapp, Facebook, Instagram and earn money.</string>
    <string name="google">Google</string>
    <string name="by_continuing">By Continuing you agree to our</string>
    <string name="terms_underline"><u>Terms &amp; Conditions</u></string>
    <string name="privacy_underline"><u>Privacy Policy</u></string>
    <string name="and">and</string>
    <string name="saving_stories">Saving stories</string>

    <string name="new_version_available">New Version Available</string>
    <string name="update_instruction">Please update to get the latest features and best experience.</string>
    <string name="update_now">Update Now</string>
    <string name="invite">Invite</string>
    <string name="share_with_your_friends">Share with your Friends</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="instagram_status">Instagram Status</string>
    <string name="downloading">Downloading</string>
    <string name="download_media">Download Media</string>
    <string name="no_item">No Downloaded Item</string>


</resources>