<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/first_color"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_marginBottom="@dimen/x20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/login_to_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/guid_line"
                        android:textColor="#808080"
                        android:textSize="18sp" />
                </RelativeLayout>



                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/app_logo">

                </ImageView>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Status Savvy"
                    android:textAlignment="center"
                    android:textColor="@color/gnt_gray"
                    android:textSize="40sp">

                </TextView>



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_gravity="bottom"
                    android:id="@+id/login_google"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_border"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_google_round"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/btn_google_signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="#ffb954"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/Terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:fontFamily="@font/montserrat_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/by_continuing"
                        android:textColor="@color/gnt_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:fontFamily="@font/montserrat_regular"
                        android:id="@+id/tvTerms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/terms_underline"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Terms"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:fontFamily="@font/montserrat_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/and"
                        android:textColor="@color/gnt_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:fontFamily="@font/montserrat_regular"
                        android:id="@+id/tvPrivacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/privacy_underline"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp" />

                </LinearLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
